--- a/css/style.css
+++ b/css/style.css
@@ -128,3 +128,18 @@ body {
     transform-style: preserve-3d;
     transform: translate3d(-50%, -50%, 50px) rotate(-15deg);
 }
+
+.container .box:nth-child(1) .circle,
+.container .box:nth-child(1) .buy {
+    background: #379bf7;
+}
+
+.container .box:nth-child(2) .circle,
+.container .box:nth-child(2) .buy {
+    background: #47b960;
+}
+
+.container .box:nth-child(3) .circle,
+.container .box:nth-child(3) .buy {
+    background: #be37ca;
+}
