--- a/Project 3/css/style.css
+++ b/Project 3/css/style.css
@@ -27,3 +27,23 @@ section::before {
     background: linear-gradient(#f00, #f0f);
     border-radius: 50%;
 }
+
+.card {
+    position: absolute;
+    width: 508px;
+    height: 314px;
+    transform-style: preserve-3d;
+    perspective: 500px;
+}
+
+.card .face {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    box-shadow: 0 15px 35px rgba(0, 0, 0, 0.5);
+    border-radius: 15px;
+    background: rgba(255, 255, 255, 0.05);
+    backdrop-filter: blur(10px);
+}
