--- a/Project 6/css/style.css
+++ b/Project 6/css/style.css
@@ -61,7 +61,7 @@ section img#cloud2 {
 section img#aviao {
     position: absolute;
     bottom: 50px;
-    left: 0;
+    left: -600px;
     z-index: 1;
     max-width: 600px;
     transform: scale(0.9);
@@ -73,4 +73,16 @@ section #tree {
     left: 0;
     width: 200%;
     height: 266px;
+    background: url(/img/tree.png);
+    background-position-y: 266px;
+}
+
+section #text {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    text-align: center;
+    color: #fff;
+    font-size: 6em;
 }
