--- a/Project 6/css/style.css
+++ b/Project 6/css/style.css
@@ -22,6 +22,17 @@ section {
     align-items: center;
 }
 
+section::after {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: blue;
+    mix-blend-mode: color-dodge;
+}
+
 section img#bg {
     position: absolute;
     top: 0;
@@ -61,7 +72,7 @@ section img#cloud2 {
 section img#aviao {
     position: absolute;
     bottom: 50px;
-    left: -600px;
+    left: -600;
     z-index: 1;
     max-width: 600px;
     transform: scale(0.9);
@@ -75,14 +86,16 @@ section #tree {
     height: 266px;
     background: url(/img/tree.png);
     background-position-y: 266px;
+    z-index: 10;
 }
 
 section #text {
     position: absolute;
-    bottom: 0;
+    bottom: -400px;
     left: 0;
     width: 100%;
     text-align: center;
     color: #fff;
     font-size: 6em;
+    z-index: 9;
 }
