--- a/Project 6/css/style.css
+++ b/Project 6/css/style.css
@@ -72,10 +72,10 @@ section img#cloud2 {
 section img#aviao {
     position: absolute;
     bottom: 50px;
-    left: -600;
+    left: -400px;
     z-index: 1;
     max-width: 600px;
-    transform: scale(0.9);
+    transform: scale(0.5);
 }
 
 section #tree {
